Fix broken links and incorrect text that hasn't happened yet

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,13 +9,15 @@
       of others, bots or news sources.
     </p>
     <p>
-      The <a href="/timeline">/timeline</a> view displays the latest posts of
+      The <a href="/">timeline</a> view displays the latest posts of
       users on this instance. Since <i>twtxt</i> itself is a federated and
       decentralised micro-blogging format there is no "global" timeline.
     </p>
     <p>
-      There is also a builtin <a href="/registry/v1">/registry</a> and <a href="/api/v1">/api</a> that serves as a registry and search
-      endpoint for keyword and mentions and direct API access to this instance.
+      <del>
+        There is also a builtin <a href="#">/registry/v1</a> and <a href="#">/api/v1</a> that serves as a registry and search
+        endpoint for keyword and mentions and direct API access to this instance.
+      </del>
     </p>
   </div>
 </article>
