Add theme-switcher and remove erroneous prism.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <link href="/css/pico.min.css" rel="stylesheet" />
+    <link href="/css/theme-switcher.css" rel="stylesheet" />
     {{ template "stylesheets" . }}
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {{ template "css" . }}
@@ -52,7 +53,7 @@
     </div>
   </footer>
 </body>
-<script src="https://cdn.rawgit.com/Kimeiga/bahunya/26313661/prism.js"></script>
+<script src="/js/theme-switcher.js"></script>
 {{ template "scripts" . }}
 </html>
 {{end}}
